# homebrew-remove-interactive

./: .gitignore  Cargo.toml  README.md  homebrew-remove-interactive.sublime-project  rustfmt.toml
fixtures/: brew_info_all.json
src/: main.rs
src/homebrew/: api.rs  client.rs  mod.rs
src/ui/: events.rs  formula_info.rs  formulae_list.rs  help_bar.rs  layout.rs  mod.rs  state.rs
